--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,14 +1,22 @@
 <mat-card>
     <mat-spinner *ngIf="isLoading"></mat-spinner>
-    <form  (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+    <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
-        <input matInput type="text" name="title" placeholder="Post Title" [ngModel]="post?.title" required minlength="3" #title="ngModel">
+        <input matInput type="text" formControlName="title" placeholder="Post Title" minlength="3" >
 
-        <mat-error *ngIf="title.invalid">Please enter a post a title</mat-error>
+        <mat-error *ngIf="form.get('title').invalid">Please enter a post a title</mat-error>
     </mat-form-field>
+    <div>
+        <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+<input type="file" #filePicker (change)="onImagePicked($event)">
+
+    </div>
+    <div class="image-preview" *ngIf="imagePreview!=='' && imagePreview && form.get('image').valid">
+        <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
     <mat-form-field>
-        <textarea matInput rows="4"  name="content"  placeholder="Post Content" [ngModel]="post?.content" required #content="ngModel"></textarea>
-        <mat-error *ngIf="content.invalid">Please enter the post's content</mat-error>
+        <textarea matInput rows="4" formControlName="content" name="content"  placeholder="Post Content"  ></textarea>
+        <mat-error *ngIf="form.get('content').invalid">Please enter the post's content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
 </form>
