--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -7,8 +7,13 @@
     <mat-expansion-panel-header>
         {{post.title}}
     </mat-expansion-panel-header>
+    <div class="post-image">
+
+<img [src]="post.imagePath" [alt]="post.title">
+
+    </div>
     <p>    {{post.content}}</p>
-<mat-action-row>
+<mat-action-row *ngIf="userIsAuthenticated">
     <a mat-button mat-raised-button color="primary" [routerLink]="['/edit',post.id]">EDIT</a>
     <button mat-button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
 </mat-action-row>
@@ -16,4 +21,5 @@
 
     </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)" *ngIf="posts.length>0"></mat-paginator>
 <p class="info-text mat-body-1" *ngIf="posts.length<=0 && !isLoading">No posts added yet!</p>
